<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ExerciseFragment" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <TextView
        android:id="@+id/counters_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/counters"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_title" />

    <TextView
        android:id="@+id/guess_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/guess_counter"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/counters_title" />

    <TextView
        android:id="@+id/no_guess_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:text="@string/counter_no_guess"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guess_counter"
        app:layout_constraintTop_toBottomOf="@+id/counters_title" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/counters"
        android:layout_width="305dp"
        android:layout_height="56dp"
        android:layout_marginTop="70dp"
        app:constraint_referenced_ids="counter_one, counter_two"
        app:flow_horizontalGap="100dp"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/counters_title" />

    <TextView
        android:id="@+id/counter_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digital_counter"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/counter_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digital_counter"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/guess_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/word"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/counters" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/buttons_answer"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        app:constraint_referenced_ids="word_one, word_two, word_three, word_four"
        app:flow_horizontalGap="10dp"
        app:flow_horizontalStyle="packed"
        app:flow_verticalGap="10dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/guess_word" />

    <Button
        android:id="@+id/word_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button" />

    <Button
        android:id="@+id/word_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button" />

    <Button
        android:id="@+id/word_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button"/>

    <Button
        android:id="@+id/word_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button" />

</androidx.constraintlayout.widget.ConstraintLayout>